force-app/main/default/objects/Case/fields/active_at__c.field-meta.xml
<CustomField>
    <fullName>active_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Active At</label>
    <type>DateTime</type>
</CustomField>