force-app/main/default/objects/Case/fields/Agent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agent_Feedback__c</fullName>
    <formula>IF(ISBLANK(TEXT(Agent_Feedback_Score__c)),&apos;&apos;,
IMAGE(CASE( Text(Agent_Feedback_Score__c) , 
&apos;4&apos;,&apos;/resource/CSAT/4.png&apos;, 
&apos;3&apos;,&apos;/resource/CSAT/3.png&apos;, 
&apos;2&apos;,&apos;/resource/CSAT/2.png&apos;, 
&apos;1&apos;,&apos;/resource/CSAT/1.png&apos;,&apos;&apos;),&apos;&apos;,22,22)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Feedback</label>
    <type>Text</type>
</CustomField>