force-app/main/default/objects/Case/fields/AMC__c.field-meta.xml
<CustomField>
    <fullName>AMC__c</fullName>
    <description>Annual Support Contract Amount</description>
    <inlineHelpText>Annual Support Contract Amount</inlineHelpText>
    <label>AMC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>