force-app/main/default/objects/Case/fields/AMC_Commence_Date__c.field-meta.xml
<CustomField>
    <fullName>AMC_Commence_Date__c</fullName>
    <description>Software Service Agreement Commencement Date</description>
    <inlineHelpText>Software Service Agreement Commenced from this date</inlineHelpText>
    <label>AMC Commence Date</label>
    <type>Date</type>
</CustomField>