force-app/main/default/objects/Case/fields/Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User__c</fullName>
    <formula>If(Left( OwnerId ,3) = &apos;005&apos;,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to User</label>
    <type>Checkbox</type>
</CustomField>