force-app/main/default/objects/Case/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created During Business Hours</label>
    <type>Checkbox</type>
</CustomField>