force-app/main/default/objects/Case/fields/Case_Open_Age_Total__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Age_Total__c</fullName>
    <defaultValue>&quot;0 Hours 0 minutes&quot;</defaultValue>
    <label>Case Open Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>