force-app/main/default/objects/Case/fields/Case_Open_From_Other_State__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_From_Other_State__c</fullName>
    <label>Case Open From Other State</label>
    <type>Date</type>
</CustomField>