force-app/main/default/objects/Case/fields/Cause_Code__c.field-meta.xml
<CustomField>
    <fullName>Cause_Code__c</fullName>
    <description>Case Cause Code</description>
    <inlineHelpText>TSE will require to assign a Cause Code to the case based on the troubleshooting and email chain followed before marking a case Resolved.</inlineHelpText>
    <label>Cause Code</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>