force-app/main/default/objects/Case/fields/changed_at__c.field-meta.xml
<CustomField>
    <fullName>changed_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>