force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>If(not(ispickval(Origin,&apos;&apos;)),IMAGE(
IF( BEGINS(TEXT(Origin), &apos;Email&apos;) , &apos;/resource/icons/Email.png&apos;, CASE( Origin,
&apos;Community&apos;,&apos;/resource/icons/community.png&apos;,
&apos;Email&apos;,&apos;/resource/icons/Email.png&apos;,
&apos;Phone&apos;,&apos;/resource/icons/Phone.png&apos;,
&apos;Web&apos;,&apos;/resource/icons/community.png&apos;,
&apos;Twitter&apos;,&apos;/resource/icons/twitterCopy.png&apos;,
&apos;Facebook&apos;,&apos;/resource/icons/facebook.png&apos;,&apos;&apos;)) ,&apos;&apos;,22,22),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>