force-app/main/default/objects/Case/fields/country_assignment__c.field-meta.xml
<CustomField>
    <fullName>country_assignment__c</fullName>
    <formula>IF((VALUE( MID( TEXT( CreatedDate ), 12, 2) )&lt;= 12),&quot;India&quot;,&quot;Canada&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Assignment</label>
    <type>Text</type>
</CustomField>