force-app/main/default/objects/Case/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>