force-app/main/default/objects/Case/fields/Current_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Case_Owner__c</fullName>
    <label>Current Case Owner Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L2 Support</fullName>
            </value>
            <value>
                <fullName>L3 Support</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>