force-app/main/default/objects/Case/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <defaultValue>DATETIMEVALUE(NOW())</defaultValue>
    <description>Current date value</description>
    <label>Current Date</label>
    <type>DateTime</type>
</CustomField>