force-app/main/default/objects/Case/fields/custom_category__c.field-meta.xml
<CustomField>
    <fullName>custom_category__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessories Request</fullName>
            </value>
            <value>
                <fullName>Activate Different IXM WEB Instance</fullName>
            </value>
            <value>
                <fullName>AMC Request for Devices</fullName>
            </value>
            <value>
                <fullName>AMC Request for IXM WEB</fullName>
                <label>ASC Request for IXM WEB</label>
            </value>
            <value>
                <fullName>Control4 Driver Issue</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Query</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Request</fullName>
            </value>
            <value>
                <fullName>Control4 Issues</fullName>
            </value>
            <value>
                <fullName>Credance Tab Issue</fullName>
            </value>
            <value>
                <fullName>Credence Hardware Issue</fullName>
            </value>
            <value>
                <fullName>Credence TAB Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Credence TAB Query</fullName>
            </value>
            <value>
                <fullName>Credence TAB Requirement</fullName>
            </value>
            <value>
                <fullName>Credence TAB Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Credence TWO Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Credence TWO Issue</fullName>
            </value>
            <value>
                <fullName>Credence TWO Requirement</fullName>
            </value>
            <value>
                <fullName>Credence TWO Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Customization Feature Support</fullName>
            </value>
            <value>
                <fullName>Customization License Request</fullName>
            </value>
            <value>
                <fullName>Customization Query</fullName>
            </value>
            <value>
                <fullName>Customization Request</fullName>
            </value>
            <value>
                <fullName>Customization Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Customized Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Customized IXM WEB Upgrade</fullName>
            </value>
            <value>
                <fullName>Device Installation Problems</fullName>
            </value>
            <value>
                <fullName>Device Requirement</fullName>
            </value>
            <value>
                <fullName>Device Serial Number Issue</fullName>
            </value>
            <value>
                <fullName>Documentation Query</fullName>
            </value>
            <value>
                <fullName>Enrollment Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>