force-app/main/default/objects/Case/fields/custom_date_received__c.field-meta.xml
<CustomField>
    <fullName>custom_date_received__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Date Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>