force-app/main/default/objects/Case/fields/custom_device_family__c.field-meta.xml
<CustomField>
    <fullName>custom_device_family__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Device Family</label>
    <length>40</length>
    <type>Text</type>
</CustomField>