force-app/main/default/objects/Case/fields/custom_device_serial_no__c.field-meta.xml
<CustomField>
    <fullName>custom_device_serial_no__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Device Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>