force-app/main/default/objects/Case/fields/custom_mac_address__c.field-meta.xml
<CustomField>
    <fullName>custom_mac_address__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>MAC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>