force-app/main/default/objects/Case/fields/custom_rma_complete_date__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_complete_date__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>RMA Complete Date</label>
    <type>DateTime</type>
</CustomField>