force-app/main/default/objects/Case/fields/custom_rma_devices_sent_to__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_devices_sent_to__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>RMA Device(s) sent to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please Select</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>