force-app/main/default/objects/Case/fields/custom_rma_repair_cost__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_repair_cost__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>RMA Repair Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>