force-app/main/default/objects/Case/fields/custom_rma_status__c.field-meta.xml
<CustomField>
    <fullName>custom_rma_status__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>RMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <color>#6600CC</color>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Device Received</fullName>
                <color>#FFCC66</color>
                <label>Device Received</label>
            </value>
            <value>
                <fullName>Under Repaired</fullName>
                <color>#CC9933</color>
                <label>Under Repair</label>
            </value>
            <value>
                <fullName>Under Burning</fullName>
                <color>#006600</color>
                <label>Under Burning</label>
            </value>
            <value>
                <fullName>Shipping Back</fullName>
                <color>#78C953</color>
                <label>RMA Completed</label>
            </value>
            <value>
                <fullName>Replacement</fullName>
                <color>#CC33CC</color>
                <label>Replacement</label>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <color>#336666</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>RMA On Hold</fullName>
                <color>#666666</color>
                <label>RMA On Hold</label>
            </value>
            <value>
                <fullName>Refurbish</fullName>
                <color>#F96FB7</color>
                <label>Refurbish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>