force-app/main/default/objects/Case/fields/custom_team_viewer_duration__c.field-meta.xml
<CustomField>
    <fullName>custom_team_viewer_duration__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Remote Session Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>