force-app/main/default/objects/Case/fields/Date_of_ECO_ECN_Applied__c.field-meta.xml
<CustomField>
    <fullName>Date_of_ECO_ECN_Applied__c</fullName>
    <description>Select a date value when ECO/ECN Applied</description>
    <inlineHelpText>Select a date value when ECO/ECN Applied</inlineHelpText>
    <label>Date of ECO/ECN Applied</label>
    <type>Date</type>
</CustomField>