force-app/main/default/objects/Case/fields/Date_Time_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_First_Response__c</fullName>
    <description>date/timestamp of first response</description>
    <inlineHelpText>Date/timestamp of first response</inlineHelpText>
    <label>Date/Time First Response</label>
    <type>DateTime</type>
</CustomField>