force-app/main/default/objects/Case/fields/Date_Time_Open_Status_changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Open_Status_changed__c</fullName>
    <label>Date/Time Open Status changed</label>
    <type>DateTime</type>
</CustomField>