force-app/main/default/objects/Case/fields/Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>Defect_Code__c</fullName>
    <description>Case Defect Code</description>
    <inlineHelpText>Defect Code that TSE will have to pick that is applicable for the assigned case</inlineHelpText>
    <label>Defect Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories Request</fullName>
            </value>
            <value>
                <fullName>Activate Different IXM WEB Instance</fullName>
            </value>
            <value>
                <fullName>AMC Request for Devices</fullName>
            </value>
            <value>
                <fullName>ASC Request for IXM WEB</fullName>
            </value>
            <value>
                <fullName>Business Inquiry</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Issue</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Query</fullName>
            </value>
            <value>
                <fullName>Control4 Driver Request</fullName>
            </value>
            <value>
                <fullName>Control4 Issues</fullName>
            </value>
            <value>
                <fullName>CONVERT License Request</fullName>
            </value>
            <value>
                <fullName>Convert SDK License Request</fullName>
            </value>
            <value>
                <fullName>Credance Tab Issue</fullName>
            </value>
            <value>
                <fullName>Credence Hardware Issue</fullName>
            </value>
            <value>
                <fullName>Credence TAB Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Credence TAB License Request</fullName>
            </value>
            <value>
                <fullName>Credence TAB Query</fullName>
            </value>
            <value>
                <fullName>Credence TAB Requirement</fullName>
            </value>
            <value>
                <fullName>Credence TAB Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Credence TWO Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Credence TWO Issue</fullName>
            </value>
            <value>
                <fullName>Credence TWO License Request</fullName>
            </value>
            <value>
                <fullName>Credence TWO Requirement</fullName>
            </value>
            <value>
                <fullName>Credence TWO Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Customization Feature Support</fullName>
            </value>
            <value>
                <fullName>Customization License Request</fullName>
            </value>
            <value>
                <fullName>Customization Query</fullName>
            </value>
            <value>
                <fullName>Customization Request</fullName>
            </value>
            <value>
                <fullName>Customization Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Customized Firmware Upgrade</fullName>
            </value>
            <value>
                <fullName>Customized IXM WEB Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>