force-app/main/default/objects/Case/fields/DESKSCMT_Desk_Connect_Sync__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Desk_Connect_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desk Connect Sync</label>
    <type>Checkbox</type>
</CustomField>