force-app/main/default/objects/Case/fields/DESKSCMT_Desk_Migrated_Case__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Desk_Migrated_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desk Migrated Case</label>
    <type>Checkbox</type>
</CustomField>