force-app/main/default/objects/Case/fields/Device_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Device_Ship_Date__c</fullName>
    <description>Device Shipping Date</description>
    <label>Device Ship Date</label>
    <type>Date</type>
</CustomField>