force-app/main/default/objects/Case/fields/ECO_ECN_Applied__c.field-meta.xml
<CustomField>
    <fullName>ECO_ECN_Applied__c</fullName>
    <description>Toggle this field to TRUE or FALSE to confirm if the ECO/ECN Applied for the RMA Device(s) or not.</description>
    <inlineHelpText>ECO/ECN Applied</inlineHelpText>
    <label>ECO/ECN Applied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>