force-app/main/default/objects/Case/fields/End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Name__c</fullName>
    <description>End User name for referance</description>
    <label>End User Name</label>
    <type>TextArea</type>
</CustomField>