force-app/main/default/objects/Case/fields/Estimated_Repair_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Repair_Date__c</fullName>
    <formula>custom_rma_device_received_date__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Repair Date</label>
    <type>Date</type>
</CustomField>