force-app/main/default/objects/Case/fields/Feedback_for_Agent__c.field-meta.xml
<CustomField>
    <fullName>Feedback_for_Agent__c</fullName>
    <label>Feedback for Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>